Add Configuration and Add Nuget Packages

--- a/PrayerAppServices/appsettings.Production.json
+++ b/PrayerAppServices/appsettings.Production.json
@@ -4,7 +4,7 @@
     },
     "Jwt": {
         "Key": "Use environment variable JWT__KEY",
-        // FIXME: This needs to point to the deployed URl
+        // FIXME: This needs to point to the deployed URL
         "Issuer": "http://localhost:5000",
         "Audience": "http://localhost:5000"
     },
