--- a/PrayerAppServices/appsettings.Production.json
+++ b/PrayerAppServices/appsettings.Production.json
@@ -4,9 +4,8 @@
     },
     "Jwt": {
         "Key": "Use environment variable JWT__KEY",
-        // FIXME: This needs to point to the deployed URL
-        "Issuer": "http://localhost:5000",
-        "Audience": "http://localhost:5000"
+        "Issuer": "https://prayerappservices.onrender.com",
+        "Audience": "https://prayerappservices.onrender.com"
     },
     "Logging": {
         "LogLevel": {
