Remove Dotnet ef commands

--- a/PrayerAppServices/Dockerfile
+++ b/PrayerAppServices/Dockerfile
@@ -17,9 +17,6 @@ COPY . .
 WORKDIR "/src/PrayerAppServices"
 RUN dotnet build "./PrayerAppServices.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
-# Install dotnet-ef
-RUN dotnet tool install --global dotnet-ef
-ENV PATH="$PATH:/root/.dotnet/tools"
 
 # This stage is used to publish the service project to be copied to the final stage
 FROM build AS publish
@@ -30,5 +27,4 @@ RUN dotnet publish "./PrayerAppServices.csproj" -c $BUILD_CONFIGURATION -o /app/
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-COPY --from=build /root/.dotnet/tools/dotnet-ef /usr/local/bin/dotnet-ef
-ENTRYPOINT dotnet-ef database update -- --connection=$CONNECTION_STRINGS__DEFAULTCONNECTION && dotnet PrayerAppServices.dll
+ENTRYPOINT ["dotnet", "PrayerAppServices.dll"]
