--- a/PrayerAppServices/appsettings.Production.json
+++ b/PrayerAppServices/appsettings.Production.json
@@ -1,9 +1,9 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Use environment variable CONNECTION_STRINGS__DEFAULTCONNECTION"
+        "DefaultConnection": "Use environment variable ConnectionStrings__DefaultConnection"
     },
     "Jwt": {
-        "Key": "Use environment variable JWT__KEY",
+        "Key": "Use environment variable Jwt__Key",
         "Issuer": "https://prayerappservices.onrender.com",
         "Audience": "https://prayerappservices.onrender.com"
     },
