Add RestSharp Library and Add Rest Client configuration

--- a/PrayerAppServices/appsettings.Production.json
+++ b/PrayerAppServices/appsettings.Production.json
@@ -7,6 +7,10 @@
         "Issuer": "https://prayerappservices.onrender.com",
         "Audience": "https://prayerappservices.onrender.com"
     },
+    "FileUpload": {
+        // TODO: Add File Services URL
+        "Url": ""
+    },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
