Update File Services URL

--- a/PrayerAppServices/appsettings.Development.json
+++ b/PrayerAppServices/appsettings.Development.json
@@ -7,7 +7,7 @@
         "Issuer": "http://localhost:5152",
         "Audience": "http://localhost:5152"
     },
-    "FileUpload": {
+    "FileServices": {
         "Url": "http://localhost:5000" 
     },
     "Logging": {
