--- a/PrayerAppServices/appsettings.Production.json
+++ b/PrayerAppServices/appsettings.Production.json
@@ -7,9 +7,8 @@
         "Issuer": "https://prayerappservices.onrender.com",
         "Audience": "https://prayerappservices.onrender.com"
     },
-    "FileUpload": {
-        // TODO: Add File Services URL
-        "Url": ""
+    "FileServices": {
+        "Url": "https://prayerappfileservices.pythonanywhere.com"
     },
     "Logging": {
         "LogLevel": {
