Get File Name from File URI

--- a/PrayerAppServices/appsettings.Development.json
+++ b/PrayerAppServices/appsettings.Development.json
@@ -8,7 +8,7 @@
         "Audience": "http://localhost:5152"
     },
     "FileServices": {
-        "Url": "http://localhost:5000" 
+        "Url": "http://127.0.0.1:5000" 
     },
     "Logging": {
         "LogLevel": {
