--- a/PrayerAppServices/PrayerAppServices.csproj
+++ b/PrayerAppServices/PrayerAppServices.csproj
@@ -38,4 +38,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Common\" />
+  </ItemGroup>
+
 </Project>
